# truss

./: .gitignore  README.md
docs/: spec.md
docs/superpowers/plans/: 2026-06-03-truss-phase1.md  2026-06-04-truss-phase2-python.md  2026-06-04-truss-phase2-typescript.md  2026-06-04-truss-python.md  2026-06-04-truss-typescript.md  2026-06-05-truss-phase3-python.md  2026-06-05-truss-phase3-typescript.md
python/: pyproject.toml
python/examples/hermes/: main.py
python/src/truss/: __init__.py  errors.py  session.py  types.py
python/src/truss/adapters/: crewai.py  langchain.py  langgraph.py
python/src/truss/budget/: circuit_breaker.py  config.py  ledger.py  memory_store.py  sqlite_store.py
python/src/truss/context/: surgeon.py
python/src/truss/coord/: checkpoint.py  sqlite_checkpoint.py
python/src/truss/fence/: memory_fence.py
python/src/truss/handoff/: envelope.py
python/src/truss/mcp/: interceptor.py
python/src/truss/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
python/src/truss/router/: router.py
python/tests/: conftest.py  test_adapters_crewai.py  test_adapters_langchain_p2.py  test_adapters_langgraph.py  test_budget.py  test_checkpoint.py  test_circuit_breaker.py  test_fence.py  test_handoff.py  test_langchain.py  test_mcp.py  test_providers.py  test_providers_p3.py  test_router.py  test_session.py  test_surgeon.py  test_types.py
typescript/: package-lock.json  package.json
typescript/examples/: hermes.ts
typescript/src/: errors.ts  index.ts  session.ts  types.ts
typescript/tests/: budget.test.ts  checkpoint.test.ts  circuit-breaker.test.ts  fence.test.ts  handoff.test.ts  mcp.test.ts  providers-p3.test.ts  providers.test.ts  router.test.ts  session.test.ts  surgeon.test.ts  types.test.ts  vercel.test.ts
(+27 files in other folders)
