[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truss-ai"
version = "0.1.0"
description = "The structural layer for agentic AI workflows"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
anthropic = ["anthropic>=0.40"]
openai    = ["openai>=1.0"]
crewai    = ["crewai>=0.50"]
google    = ["google-generativeai>=0.8"]
ollama    = ["httpx>=0.27"]
all       = ["anthropic>=0.40", "openai>=1.0", "langchain-core>=0.2", "crewai>=0.50", "google-generativeai>=0.8", "httpx>=0.27"]
dev       = ["pytest>=8.0", "pytest-asyncio>=0.23", "anthropic>=0.40", "openai>=1.0", "langchain-core>=0.2", "google-generativeai>=0.8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/truss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
